--- a/Objects/filter_settings.build_log.htm
+++ b/Objects/filter_settings.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 C:\Users\David\Documents\GitHub\filter_settings\filter_settings.uvprojx
-Project File Date:  10/07/2019
+Project File Date:  10/08/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling fir.c...
 linking...
-Program Size: Code=8886 RO-data=494 RW-data=28 ZI-data=4028  
+Program Size: Code=8942 RO-data=494 RW-data=28 ZI-data=4028  
 ".\Objects\filter_settings.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
