--- a/Objects/filter_settings.build_log.htm
+++ b/Objects/filter_settings.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  10/08/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling fir.c...
 compiling main.c...
 linking...
-Program Size: Code=10432 RO-data=1464 RW-data=28 ZI-data=7444  
+Program Size: Code=10432 RO-data=1704 RW-data=28 ZI-data=7172  
 ".\Objects\filter_settings.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
