--- a/Objects/filter_settings.build_log.htm
+++ b/Objects/filter_settings.build_log.htm
@@ -28,8 +28,9 @@ Project File Date:  10/08/2019
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling fir.c...
+compiling main.c...
 linking...
-Program Size: Code=10460 RO-data=2108 RW-data=28 ZI-data=8236  
+Program Size: Code=10488 RO-data=2108 RW-data=28 ZI-data=8236  
 ".\Objects\filter_settings.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -128,7 +129,7 @@ Package Vendor: Keil
       Source file:   MDK\Device\Source\ARM\STM32F42xxx_43xxx_OPT.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f429xx.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
